--- a/src/Euclid.Common.Registry/Euclid.Common.Registry.csproj
+++ b/src/Euclid.Common.Registry/Euclid.Common.Registry.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InMemoryRecordRepository.cs" />
     <Compile Include="InMemoryRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
