--- a/tests/Euclid.Common.IntegrationTests/Euclid.Common.IntegrationTests.csproj
+++ b/tests/Euclid.Common.IntegrationTests/Euclid.Common.IntegrationTests.csproj
@@ -60,6 +60,10 @@
       <Project>{F0C8929B-718E-4360-85FF-520398DEA764}</Project>
       <Name>Euclid.Common.Registry</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\src\Euclid.Common.Storage\Euclid.Common.Storage.csproj">
+      <Project>{9E2D08E0-0A3D-46D1-BCD6-D85ADE871118}</Project>
+      <Name>Euclid.Common.Storage</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\Euclid.Common.Transport\Euclid.Common.Transport.csproj">
       <Project>{B2D19FB7-F317-4122-93B2-F13727CE490E}</Project>
       <Name>Euclid.Common.Transport</Name>
