--- a/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
+++ b/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
@@ -80,6 +80,10 @@
       <Project>{4192538D-5E42-4841-8C8F-6A2072808D41}</Project>
       <Name>Euclid.Common.ServiceHost</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\src\Euclid.Common.Storage\Euclid.Common.Storage.csproj">
+      <Project>{9E2D08E0-0A3D-46D1-BCD6-D85ADE871118}</Project>
+      <Name>Euclid.Common.Storage</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\Euclid.Common.Transport\Euclid.Common.Transport.csproj">
       <Project>{B2D19FB7-F317-4122-93B2-F13727CE490E}</Project>
       <Name>Euclid.Common.Transport</Name>
