--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Extensions\StreamExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="HostingFabric\FabricControllerState.cs" />
+    <Compile Include="HostingFabric\FabricRuntimeState.cs" />
     <Compile Include="HostingFabric\IFabricController.cs" />
     <Compile Include="HostingFabric\IFabricRuntime.cs" />
     <Compile Include="Registry\IRecord.cs" />
