--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Extensions\StreamExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="HostingFabric\Configuration\IFabricRuntimeSettings.cs" />
     <Compile Include="HostingFabric\FabricControllerState.cs" />
     <Compile Include="HostingFabric\FabricRuntimeState.cs" />
     <Compile Include="HostingFabric\IFabricController.cs" />
