naming changes, adding more of the basic structure of hosting fabric, but the implementation is being held back for now

--- a/src/Euclid.Common.HostingFabric/Euclid.Common.HostingFabric.csproj
+++ b/src/Euclid.Common.HostingFabric/Euclid.Common.HostingFabric.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultFabricController.cs" />
+    <Compile Include="LocalMachineFabricRuntime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
