stub tests for local machine hosting fabric

--- a/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
+++ b/tests/Euclid.Common.UnitTests/Euclid.Common.UnitTests.csproj
@@ -53,6 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HostingFabric\DefaultFabricControllerTests.cs" />
+    <Compile Include="HostingFabric\LocalMachineFabricTests.cs" />
     <Compile Include="Registry\InMemoryRegistryTests.cs" />
     <Compile Include="Registry\ITestRegistry.cs" />
     <Compile Include="Registry\RegistryTester.cs" />
