--- a/src/Euclid.Common.HostingFabric/Euclid.Common.HostingFabric.csproj
+++ b/src/Euclid.Common.HostingFabric/Euclid.Common.HostingFabric.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultFabricController.cs" />
-    <Compile Include="LocalMachineFabricRuntime.cs" />
+    <Compile Include="LocalMachineFabric.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
