working on nhibernate basic repository

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,13 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Euclid.Console.Web\packages.config" />
   <repository path="..\src\Euclid.Console.Web\packages.config" />
-  <repository path="..\tests\Euclid.Framework.HostingFabric.UnitTests\packages.config" />
-  <repository path="..\tests\Euclid.Framework.HostingFabric.IntegrationTests\packages.config" />
   <repository path="..\tests\Euclid.Framework.IntegrationTests\packages.config" />
   <repository path="..\tests\Euclid.Framework.UnitTests\packages.config" />
   <repository path="..\tests\Euclid.Common.IntegrationTests\packages.config" />
   <repository path="..\tests\Euclid.Common.UnitTests\packages.config" />
   <repository path="..\src\Euclid.Common.Transport\packages.config" />
-  <repository path="..\Euclid.Common.Serialization\packages.config" />
+  <repository path="..\src\Euclid.Additional.Storage\packages.config" />
 </repositories>
