--- a/tests/Euclid.Common.TestingFakes/Euclid.Common.TestingFakes.csproj
+++ b/tests/Euclid.Common.TestingFakes/Euclid.Common.TestingFakes.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\FakeSettings.cs" />
     <Compile Include="Registry\FakeMessage.cs" />
     <Compile Include="Registry\FakeRecord.cs" />
     <Compile Include="Registry\FakeRegistry.cs" />
@@ -51,6 +52,10 @@
     <Compile Include="Transport\FakeMessage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Euclid.Common.Configuration\Euclid.Common.Configuration.csproj">
+      <Project>{B04EEAA1-7492-41B9-9CEA-1D961D9A8568}</Project>
+      <Name>Euclid.Common.Configuration</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\Euclid.Common.Registry\Euclid.Common.Registry.csproj">
       <Project>{F0C8929B-718E-4360-85FF-520398DEA764}</Project>
       <Name>Euclid.Common.Registry</Name>
