--- a/tests/Euclid.Common.UnitTests/App.config
+++ b/tests/Euclid.Common.UnitTests/App.config
@@ -3,5 +3,6 @@
 <configuration>
 	<appSettings>
 		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
+		<add key="FakeSettings.FakeConfigSetting" value="Overridden value"/>
 	</appSettings>
 </configuration>
