added support for more config setting types

--- a/tests/Euclid.Common.TestingFakes/Euclid.Common.TestingFakes.csproj
+++ b/tests/Euclid.Common.TestingFakes/Euclid.Common.TestingFakes.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\FakeSettingModes.cs" />
     <Compile Include="Configuration\FakeSettings.cs" />
     <Compile Include="Registry\FakeMessage.cs" />
     <Compile Include="Registry\FakeRecord.cs" />
