--- a/tests/Euclid.Common.UnitTests/App.config
+++ b/tests/Euclid.Common.UnitTests/App.config
@@ -4,5 +4,6 @@
 	<appSettings>
 		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
 		<add key="FakeSettings.FakeConfigSetting" value="Overridden value"/>
+		<add key="FakeSettings.NumericConfigSetting" value="12"/>
 	</appSettings>
 </configuration>
