--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -7,4 +7,5 @@
   <repository path="..\tests\Euclid.Common.UnitTests\packages.config" />
   <repository path="..\src\Euclid.Common.Transport\packages.config" />
   <repository path="..\src\Euclid.Additional.Storage\packages.config" />
+  <repository path="..\src\Euclid.Common.HostingFabric\packages.config" />
 </repositories>
