--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -49,11 +49,9 @@
     <Compile Include="Configuration\IOverridableSettings.cs" />
     <Compile Include="Extensions\StreamExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="HostingFabric\Configuration\IFabricRuntimeSettings.cs" />
-    <Compile Include="HostingFabric\FabricControllerState.cs" />
     <Compile Include="HostingFabric\FabricRuntimeState.cs" />
-    <Compile Include="HostingFabric\IFabricController.cs" />
     <Compile Include="HostingFabric\IFabricRuntime.cs" />
+    <Compile Include="HostingFabric\IFabricRuntimeStatus.cs" />
     <Compile Include="Storage\IBasicRecordRepository.cs" />
     <Compile Include="Registry\IRecord.cs" />
     <Compile Include="Registry\IRegistry.cs" />
