fixed csproj references

--- a/src/Euclid.Common.Registry/Euclid.Common.Registry.csproj
+++ b/src/Euclid.Common.Registry/Euclid.Common.Registry.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InMemoryRegistry.cs" />
+    <Compile Include="DefaultRecordRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
