--- a/tests/Euclid.Common.IntegrationTests/app.config
+++ b/tests/Euclid.Common.IntegrationTests/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="test-db" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;"/>
+    <add name="test-db" connectionString="Data Source=.;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;"/>
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
