added logging, enabled basic version of it for multitasking service host tests, but i'm not really sure how to unit test it

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -8,4 +8,5 @@
   <repository path="..\src\Euclid.Common.Transport\packages.config" />
   <repository path="..\src\Euclid.Additional.Storage\packages.config" />
   <repository path="..\src\Euclid.Common.HostingFabric\packages.config" />
+  <repository path="..\src\Euclid.Common.Logging\packages.config" />
 </repositories>
