--- a/src/Euclid.Common.Logging/Euclid.Common.Logging.csproj
+++ b/src/Euclid.Common.Logging/Euclid.Common.Logging.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{9E2D08E0-0A3D-46D1-BCD6-D85ADE871118}</ProjectGuid>
+    <ProjectGuid>{8D46ACE3-E0DC-4317-B321-BDFE71F843E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Euclid.Common.Storage</RootNamespace>
-    <AssemblyName>Euclid.Common.Storage</AssemblyName>
+    <RootNamespace>Euclid.Common.Logging</RootNamespace>
+    <AssemblyName>Euclid.Common.Logging</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>..\..\packages\log4net.1.2.10\lib\2.0\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Blob\InMemoryBlobStorage.cs" />
+    <Compile Include="LoggingSourceExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Record\InMemoryRecordRepository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Euclid.Common\Euclid.Common.csproj">
