--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -73,8 +73,11 @@
     <Compile Include="Storage\IBlobStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transport\IMessage.cs" />
+    <Compile Include="Transport\IMessageDispatcher.cs" />
+    <Compile Include="Transport\IMessageProcessor.cs" />
     <Compile Include="Transport\IMessageTransport.cs" />
     <Compile Include="Transport\ITypeTransport.cs" />
+    <Compile Include="Transport\MessageDispatcherState.cs" />
     <Compile Include="Transport\TransportState.cs" />
   </ItemGroup>
   <ItemGroup />
