--- a/tests/Euclid.Common.IntegrationTests/Euclid.Common.IntegrationTests.csproj
+++ b/tests/Euclid.Common.IntegrationTests/Euclid.Common.IntegrationTests.csproj
@@ -69,10 +69,6 @@
     <Compile Include="Storage\NhibernateRecordRepositoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Euclid.Additional.Storage\Euclid.Common.Storage.Nhibernate.csproj">
-      <Project>{A5B72DFB-6698-420C-ADCC-3F2D28C4F65E}</Project>
-      <Name>Euclid.Common.Storage.Nhibernate</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\src\Euclid.Common.Registry\Euclid.Common.Registry.csproj">
       <Project>{F0C8929B-718E-4360-85FF-520398DEA764}</Project>
       <Name>Euclid.Common.Registry</Name>
@@ -80,6 +76,10 @@
     <ProjectReference Include="..\..\src\Euclid.Common.Serialization\Euclid.Common.Serialization.csproj">
       <Project>{FEDCC429-C8F4-4D31-AC3B-4284C4E08B83}</Project>
       <Name>Euclid.Common.Serialization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\Euclid.Common.Storage.NHibernate\Euclid.Common.Storage.NHibernate.csproj">
+      <Project>{A5B72DFB-6698-420C-ADCC-3F2D28C4F65E}</Project>
+      <Name>Euclid.Common.Storage.NHibernate</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\src\Euclid.Common.Storage\Euclid.Common.Storage.csproj">
       <Project>{9E2D08E0-0A3D-46D1-BCD6-D85ADE871118}</Project>
