basic message dispatcher, does everything but dispatch messages

--- a/tests/Euclid.Common.TestingFakes/Euclid.Common.TestingFakes.csproj
+++ b/tests/Euclid.Common.TestingFakes/Euclid.Common.TestingFakes.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Storage\FakeMessage.cs" />
     <Compile Include="Storage\FakeRecord.cs" />
     <Compile Include="Transport\FakeMessage.cs" />
+    <Compile Include="Transport\FakeMessageProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Euclid.Common.Configuration\Euclid.Common.Configuration.csproj">
@@ -65,6 +66,10 @@
     <ProjectReference Include="..\..\src\Euclid.Common.ServiceHost\Euclid.Common.ServiceHost.csproj">
       <Project>{4192538D-5E42-4841-8C8F-6A2072808D41}</Project>
       <Name>Euclid.Common.ServiceHost</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\Euclid.Common.Transport\Euclid.Common.Transport.csproj">
+      <Project>{B2D19FB7-F317-4122-93B2-F13727CE490E}</Project>
+      <Name>Euclid.Common.Transport</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\src\Euclid.Common\Euclid.Common.csproj">
       <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
