--- a/src/Euclid.Common.Transport/Euclid.Common.Transport.csproj
+++ b/src/Euclid.Common.Transport/Euclid.Common.Transport.csproj
@@ -31,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core">
+      <HintPath>..\..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor">
+      <HintPath>..\..\packages\Castle.Windsor.2.5.3\lib\NET40\Castle.Windsor.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>E:\Program Files\Windows Azure SDK\v1.4\bin\runtimes\base\Microsoft.WindowsAzure.ServiceRuntime.dll</HintPath>
@@ -51,11 +57,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AzureMessageTransport.cs" />
+    <Compile Include="DefaultMessageProcessor.cs" />
     <Compile Include="InMemoryMessageTransport.cs" />
+    <Compile Include="MessageDispatcherSettings.cs" />
     <Compile Include="MessageTransportBase.cs" />
+    <Compile Include="MultitaskingMessageDispatcher.cs" />
+    <Compile Include="NoDispatchingSliceDurationConfiguredException.cs" />
+    <Compile Include="NoInputTransportConfiguredException.cs" />
+    <Compile Include="NoMessageProcessorsConfiguredException.cs" />
+    <Compile Include="NoNumberOfMessagesPerSliceConfiguredException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Euclid.Common.Configuration\Euclid.Common.Configuration.csproj">
+      <Project>{B04EEAA1-7492-41B9-9CEA-1D961D9A8568}</Project>
+      <Name>Euclid.Common.Configuration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Euclid.Common.Logging\Euclid.Common.Logging.csproj">
+      <Project>{8D46ACE3-E0DC-4317-B321-BDFE71F843E7}</Project>
+      <Name>Euclid.Common.Logging</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Euclid.Common\Euclid.Common.csproj">
       <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
       <Name>Euclid.Common</Name>
