--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transport\IMessage.cs" />
     <Compile Include="Transport\IMessageDispatcher.cs" />
+    <Compile Include="Transport\IMessageDispatcherSettings.cs" />
     <Compile Include="Transport\IMessageProcessor.cs" />
     <Compile Include="Transport\IMessageTransport.cs" />
     <Compile Include="Transport\ITypeTransport.cs" />
