added Common Service Locator support to HostingFabric, Fixed bug in Azure Transport when calling ReceiveMany<T>

--- a/src/Euclid.Common.HostingFabric/Euclid.Common.HostingFabric.csproj
+++ b/src/Euclid.Common.HostingFabric/Euclid.Common.HostingFabric.csproj
@@ -37,6 +37,9 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\..\packages\Castle.Windsor.2.5.3\lib\NET40\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation">
+      <HintPath>..\Euclid.Common.Transport\bin\Debug\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
