--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -9,4 +9,5 @@
   <repository path="..\src\Euclid.Additional.Storage\packages.config" />
   <repository path="..\src\Euclid.Common.HostingFabric\packages.config" />
   <repository path="..\src\Euclid.Common.Logging\packages.config" />
+  <repository path="..\src\Euclid.Common.Storage.Azure\packages.config" />
 </repositories>
