--- a/tests/Euclid.Common.IntegrationTests/app.config
+++ b/tests/Euclid.Common.IntegrationTests/app.config
@@ -15,4 +15,9 @@
 	<startup useLegacyV2RuntimeActivationPolicy="true">
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
 	</startup>
+  <appSettings>
+    <add key="DataConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="FakeSettings.FakeConfigSetting" value="Overridden value" />
+    <add key="FakeSettings.NumericConfigSetting" value="12" />
+  </appSettings>
 </configuration>
