--- a/src/Euclid.Framework/Euclid.Framework.csproj
+++ b/src/Euclid.Framework/Euclid.Framework.csproj
@@ -42,7 +42,10 @@
   <ItemGroup>
     <Compile Include="Cqrs\ICommand.cs" />
     <Compile Include="Cqrs\ICommandProcessor.cs" />
+    <Compile Include="Cqrs\ICommandPublicationRecord.cs" />
+    <Compile Include="Cqrs\ICommandRegistry.cs" />
     <Compile Include="Cqrs\IQuery.cs" />
+    <Compile Include="Cqrs\Metadata\IExtractor.cs" />
     <Compile Include="EventSourcing\IAggregateDenormalizer.cs" />
     <Compile Include="IAggregateRoot.cs" />
     <Compile Include="EventSourcing\ICommandToEventMapper.cs" />
@@ -51,6 +54,13 @@
     <Compile Include="IReadModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Euclid.Common\Euclid.Common.csproj">
+      <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
+      <Name>Euclid.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
